# hoshi

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: ci.yml  release.yml
docs/: sdk.md
events/: compute.json
hoshi/: __init__.py  adb.py  aspects.py  chart.py  cli.py  dignities.py  ephemeris.py  houses.py  info.py  output.py  points.py  store.py  utils.py  zodiac.py
nuastro/: chart.py  cli.py  ephemeris.py  houses.py  points.py  store.py  zodiac.py
tests/: conftest.py  test_adb.py  test_api.py  test_aspects.py  test_chart.py  test_cli.py  test_dignities.py  test_ephemeris.py  test_houses.py  test_info.py  test_output.py  test_points.py  test_store.py  test_zodiac.py
