[project]
name = "hoshi"
version = "0.1.0"
description = "Real-sky astrology birth chart CLI."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "geopy>=2.0",
    "pydantic>=2.8",
    "pyyaml>=6.0.2",
    "rich>=10.0.0",
    "skyfield>=1.49",
    "typer>=0.12.4",
]

[project.scripts]
hoshi = "hoshi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
constraint-dependencies = [
    "future>=1.0.0",
    "numpy>=2.1.0",
    "sgp4>=2.13",
]

[[tool.uv.index]]
url = "https://artifacts.apple.com/api/pypi/pypi-private/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["hoshi"]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
